Fix alignment issues in some cases
Vertical-align: middle for the add-on element does not appear to be necessary in any browser and causes alignment issues in some circumstances (apparently on Windows, in IE8, 9, and Chrome... possibly others as well).

--- a/less/combobox.less
+++ b/less/combobox.less
@@ -12,11 +12,6 @@
   vertical-align: top;
 }
 
-.form-search .combobox-container .add-on,
-.form-inline .combobox-container .add-on {
-  vertical-align: middle;
-}
-
 .combobox-selected {
   .combobox-clear {
     display: inline-block;
